manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-backend
  namespace: aug2025-poc
  labels:
    app: fastapi-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapi-backend
  template:
    metadata:
      labels:
        app: fastapi-backend
    spec:
      containers:
        - name: fastapi
          image: quay.io/rh-ee-csuryant/aug2025-poc/fastapi-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
